--- a/website/index.html
+++ b/website/index.html
@@ -285,12 +285,52 @@ window.Quarto = {
 </div>
 <div id="listing-listings" class="quarto-listing quarto-listing-container-grid">
 <div class="list grid quarto-listing-cols-3">
-<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1713341428433" data-listing-reading-time-sort="15" data-listing-word-count-sort="2830">
+<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1713820672671" data-listing-reading-time-sort="5" data-listing-word-count-sort="996">
+<a href="./intro.html" class="quarto-grid-link">
+<div class="quarto-grid-item card h-100 card-left">
+<p class="card-img-top"><img src="images/amazon_screenshot.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
+<div class="card-body post-contents">
+<h5 class="no-anchor card-title listing-title" data-anchor-id="home">
+Introduction
+</h5>
+<div class="card-text listing-description">
+In today’s digital landscape dominated by e-commerce giants such as Amazon, the analysis of retail product data assumes paramount importance as a means to unravel the…
+</div>
+<div class="card-attribution card-text-small start">
+<div class="listing-author">
+
+</div>
+</div>
+</div>
+</div>
+</a>
+</div>
+<div class="g-col-1" data-index="1" data-listing-file-modified-sort="1713820572044" data-listing-reading-time-sort="3" data-listing-word-count-sort="418">
+<a href="./models/svm.html" class="quarto-grid-link">
+<div class="quarto-grid-item card h-100 card-left">
+<p class="card-img-top"><img src="images/svm_1.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
+<div class="card-body post-contents">
+<h5 class="no-anchor card-title listing-title">
+SVM (Support Vector Machine)
+</h5>
+<div class="card-text listing-description">
+Support Vector Machines (SVMs) are a type of supervised learning model used for classification and regression tasks. They work by finding the hyperplane that best separates…
+</div>
+<div class="card-attribution card-text-small start">
+<div class="listing-author">
+
+</div>
+</div>
+</div>
+</div>
+</a>
+</div>
+<div class="g-col-1" data-index="2" data-listing-file-modified-sort="1713341428433" data-listing-reading-time-sort="15" data-listing-word-count-sort="2830">
 <a href="./models/dtrees.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="images/dt_1.jpg" alt="Decision tree structure" style="height: 150px;"  class="thumbnail-image card-img"/></p>
 <div class="card-body post-contents">
-<h5 class="no-anchor card-title listing-title" data-anchor-id="home">
+<h5 class="no-anchor card-title listing-title">
 Decision Trees
 </h5>
 <div class="card-text listing-description">
@@ -305,7 +345,7 @@ Decision trees are a popular supervised learning algorithm used for both classif
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="1" data-listing-file-modified-sort="1713336948019" data-listing-reading-time-sort="11" data-listing-word-count-sort="2052">
+<div class="g-col-1" data-index="3" data-listing-file-modified-sort="1713336948019" data-listing-reading-time-sort="11" data-listing-word-count-sort="2052">
 <a href="./models/bayes.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="images/nb.jpg" alt="How Naive Bayes classifies categories." style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -325,27 +365,7 @@ Naive Bayes is a popular and simple probabilistic machine learning algorithm bas
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="2" data-listing-file-modified-sort="1713045751667" data-listing-reading-time-sort="5" data-listing-word-count-sort="891">
-<a href="./intro.html" class="quarto-grid-link">
-<div class="quarto-grid-item card h-100 card-left">
-<p class="card-img-top"><img src="images/amazon_screenshot.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
-<div class="card-body post-contents">
-<h5 class="no-anchor card-title listing-title">
-Introduction
-</h5>
-<div class="card-text listing-description">
-In today’s digital landscape dominated by e-commerce giants such as Amazon, the analysis of retail product data assumes paramount importance as a means to unravel the…
-</div>
-<div class="card-attribution card-text-small start">
-<div class="listing-author">
-
-</div>
-</div>
-</div>
-</div>
-</a>
-</div>
-<div class="g-col-1" data-index="3" data-listing-file-modified-sort="1709527777221" data-listing-reading-time-sort="5" data-listing-word-count-sort="998">
+<div class="g-col-1" data-index="4" data-listing-file-modified-sort="1709527777221" data-listing-reading-time-sort="5" data-listing-word-count-sort="998">
 <a href="./models/pca.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="images/pca_ex1.jpeg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -365,7 +385,7 @@ Where Principal Component Analysis and Singular Value Decomposition are used, fo
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="4" data-listing-file-modified-sort="1709524287116" data-listing-reading-time-sort="4" data-listing-word-count-sort="616">
+<div class="g-col-1" data-index="5" data-listing-file-modified-sort="1709524287116" data-listing-reading-time-sort="4" data-listing-word-count-sort="616">
 <a href="./models/clustering.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
@@ -385,7 +405,7 @@ Clustering in order to discover patterns in the data.
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="5" data-listing-file-modified-sort="1709162661000" data-listing-reading-time-sort="11" data-listing-word-count-sort="2077">
+<div class="g-col-1" data-index="6" data-listing-file-modified-sort="1709162661000" data-listing-reading-time-sort="11" data-listing-word-count-sort="2077">
 <a href="./data.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="images/violin_bim.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -405,7 +425,7 @@ Where the data source, processing, and visualization (EDA) is presented.
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="6" data-listing-file-modified-sort="1707516080609" data-listing-reading-time-sort="1" data-listing-word-count-sort="3">
+<div class="g-col-1" data-index="7" data-listing-file-modified-sort="1707516080609" data-listing-reading-time-sort="1" data-listing-word-count-sort="3">
 <a href="./conclusions.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
@@ -425,7 +445,7 @@ Placeholder
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="7" data-listing-file-modified-sort="1707509478114" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<div class="g-col-1" data-index="8" data-listing-file-modified-sort="1707509478114" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
 <a href="./models/nn.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
@@ -445,33 +465,13 @@ Placeholder
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="8" data-listing-file-modified-sort="1707509463516" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<div class="g-col-1" data-index="9" data-listing-file-modified-sort="1707509463516" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
 <a href="./models/regression.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
 <div class="card-body post-contents">
 <h5 class="no-anchor card-title listing-title">
 Regression
-</h5>
-<div class="card-text listing-description">
-Placeholder
-</div>
-<div class="card-attribution card-text-small start">
-<div class="listing-author">
-
-</div>
-</div>
-</div>
-</div>
-</a>
-</div>
-<div class="g-col-1" data-index="9" data-listing-file-modified-sort="1707509449552" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
-<a href="./models/svm.html" class="quarto-grid-link">
-<div class="quarto-grid-item card h-100 card-left">
-<div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
-<div class="card-body post-contents">
-<h5 class="no-anchor card-title listing-title">
-SVM (Support Vector Machine)
 </h5>
 <div class="card-text listing-description">
 Placeholder
