--- a/website/models/bayes.html
+++ b/website/models/bayes.html
@@ -255,7 +255,7 @@ ul.task-list li input[type="checkbox"] {
 <div style="float:right; width:34%; padding:2%">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><a href="../images/nb.jpg" class="lightbox" data-gallery="quarto-lightbox-gallery-1" data-glightbox="description: .lightbox-desc-1" title="How Naive Bayes classifies categories."><img src="../images/nb.jpg" class="img-fluid figure-img" alt="How Naive Bayes classifies categories."></a></p>
+<p><a href="../images/nb.jpg" class="lightbox" data-glightbox="description: .lightbox-desc-1" data-gallery="quarto-lightbox-gallery-1" title="How Naive Bayes classifies categories."><img src="../images/nb.jpg" class="img-fluid figure-img" alt="How Naive Bayes classifies categories."></a></p>
 <figcaption>How Naive Bayes classifies categories.</figcaption>
 </figure>
 </div>
@@ -340,7 +340,7 @@ Table&nbsp;1: The input feature pre-transformation for input into the model, and
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-sparse-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <p><code>&lt;343558x183699 sparse matrix of type '&lt;class 'numpy.float64'&gt;</code> <code>with 5305684 stored elements in Compressed Sparse Row format&gt;</code></p>
-<p><a href="../images/sparse.png" class="lightbox" data-gallery="quarto-lightbox-gallery-2" data-glightbox="description: .lightbox-desc-2"><img src="../images/sparse.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/sparse.png" class="lightbox" data-glightbox="description: .lightbox-desc-2" data-gallery="quarto-lightbox-gallery-2"><img src="../images/sparse.png" class="img-fluid figure-img"></a></p>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-sparse-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;1: An example of how sparse matrices are used and the training data as a sparse matrix.
@@ -546,7 +546,7 @@ Table&nbsp;3: The table of performance metrics for the top 15 correctly-labeled 
 <div id="fig-cm1" class="quarto-figure quarto-figure-center quarto-float anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-cm1-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<a href="../images/nb_cm.png" class="lightbox" data-gallery="quarto-lightbox-gallery-3" data-glightbox="description: .lightbox-desc-3"><img src="../images/nb_cm.png" class="img-fluid figure-img"></a>
+<a href="../images/nb_cm.png" class="lightbox" data-glightbox="description: .lightbox-desc-3" data-gallery="quarto-lightbox-gallery-3"><img src="../images/nb_cm.png" class="img-fluid figure-img"></a>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-cm1-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;2: The confusion matrix of all categories
@@ -557,7 +557,7 @@ Figure&nbsp;2: The confusion matrix of all categories
 <div id="fig-cm2" class="quarto-figure quarto-figure-center quarto-float anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-cm2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<a href="../images/nb_cm_top.png" class="lightbox" data-gallery="quarto-lightbox-gallery-4" data-glightbox="description: .lightbox-desc-4"><img src="../images/nb_cm_top.png" class="img-fluid figure-img"></a>
+<a href="../images/nb_cm_top.png" class="lightbox" data-glightbox="description: .lightbox-desc-4" data-gallery="quarto-lightbox-gallery-4"><img src="../images/nb_cm_top.png" class="img-fluid figure-img"></a>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-cm2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;3: The confusion matrix for top 15 correctly-classified categories
@@ -987,7 +987,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
   </div>
 </nav>
 </div> <!-- /content -->
-<script>var lightboxQuarto = GLightbox({"loop":false,"openEffect":"zoom","selector":".lightbox","descPosition":"bottom","closeEffect":"zoom"});
+<script>var lightboxQuarto = GLightbox({"closeEffect":"zoom","selector":".lightbox","openEffect":"zoom","descPosition":"bottom","loop":false});
 window.onload = () => {
   lightboxQuarto.on('slide_before_load', (data) => {
     const { slideIndex, slideNode, slideConfig, player, trigger } = data;
