--- a/website/models/dtrees.html
+++ b/website/models/dtrees.html
@@ -246,7 +246,7 @@ ul.task-list li input[type="checkbox"] {
 <div style="float:right; width:34%; padding:2%">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><a href="../images/dt_1.jpg" class="lightbox" data-glightbox="description: .lightbox-desc-1" data-gallery="quarto-lightbox-gallery-1" title="Decision tree structure"><img src="../images/dt_1.jpg" class="img-fluid figure-img" alt="Decision tree structure"></a></p>
+<p><a href="../images/dt_1.jpg" class="lightbox" data-gallery="quarto-lightbox-gallery-1" data-glightbox="description: .lightbox-desc-1" title="Decision tree structure"><img src="../images/dt_1.jpg" class="img-fluid figure-img" alt="Decision tree structure"></a></p>
 <figcaption>Decision tree structure</figcaption>
 </figure>
 </div>
@@ -257,7 +257,7 @@ ul.task-list li input[type="checkbox"] {
 <div style="float:left; width:34%; padding:2%">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><a href="../images/dt_2.png" class="lightbox" data-glightbox="description: .lightbox-desc-2" data-gallery="quarto-lightbox-gallery-2" title="The decision tree structure for the given example"><img src="../images/dt_2.png" class="img-fluid figure-img" alt="The decision tree structure for the given example"></a></p>
+<p><a href="../images/dt_2.png" class="lightbox" data-gallery="quarto-lightbox-gallery-2" data-glightbox="description: .lightbox-desc-2" title="The decision tree structure for the given example"><img src="../images/dt_2.png" class="img-fluid figure-img" alt="The decision tree structure for the given example"></a></p>
 <figcaption>The decision tree structure for the given example</figcaption>
 </figure>
 </div>
@@ -666,7 +666,7 @@ Table&nbsp;2: Standard metrics showing the performance of the 3 models.
 <div class="quarto-layout-cell" style="flex-basis: 33.3%;justify-content: flex-start;">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><a href="../images/dt_tree_rf.png" class="lightbox" data-glightbox="description: .lightbox-desc-3" data-gallery="quarto-lightbox-gallery-3" title="Random Forest Classifier"><img src="../images/dt_tree_rf.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/dt_tree_rf.png" class="lightbox" data-gallery="quarto-lightbox-gallery-3" data-glightbox="description: .lightbox-desc-3" title="Random Forest Classifier"><img src="../images/dt_tree_rf.png" class="img-fluid figure-img"></a></p>
 <figcaption>Random Forest Classifier</figcaption>
 </figure>
 </div>
@@ -674,7 +674,7 @@ Table&nbsp;2: Standard metrics showing the performance of the 3 models.
 <div class="quarto-layout-cell" style="flex-basis: 33.3%;justify-content: flex-start;">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><a href="../images/dt_tree_class.png" class="lightbox" data-glightbox="description: .lightbox-desc-4" data-gallery="quarto-lightbox-gallery-4" title="Standard Classifier"><img src="../images/dt_tree_class.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/dt_tree_class.png" class="lightbox" data-gallery="quarto-lightbox-gallery-4" data-glightbox="description: .lightbox-desc-4" title="Standard Classifier"><img src="../images/dt_tree_class.png" class="img-fluid figure-img"></a></p>
 <figcaption>Standard Classifier</figcaption>
 </figure>
 </div>
@@ -682,7 +682,7 @@ Table&nbsp;2: Standard metrics showing the performance of the 3 models.
 <div class="quarto-layout-cell" style="flex-basis: 33.3%;justify-content: flex-start;">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><a href="../images/dt_tree_reg.png" class="lightbox" data-glightbox="description: .lightbox-desc-5" data-gallery="quarto-lightbox-gallery-5" title="Regression DT"><img src="../images/dt_tree_reg.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/dt_tree_reg.png" class="lightbox" data-gallery="quarto-lightbox-gallery-5" data-glightbox="description: .lightbox-desc-5" title="Regression DT"><img src="../images/dt_tree_reg.png" class="img-fluid figure-img"></a></p>
 <figcaption>Regression DT</figcaption>
 </figure>
 </div>
@@ -703,7 +703,7 @@ Figure&nbsp;1: A visualization of the first 3 levels of the 3 decision tree mode
 <div id="fig-reg1" class="quarto-figure quarto-figure-center quarto-float anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-reg1-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<a href="../images/dt_reg1.png" class="lightbox" data-glightbox="description: .lightbox-desc-6" data-gallery="quarto-lightbox-gallery-6"><img src="../images/dt_reg1.png" class="img-fluid figure-img"></a>
+<a href="../images/dt_reg1.png" class="lightbox" data-gallery="quarto-lightbox-gallery-6" data-glightbox="description: .lightbox-desc-6"><img src="../images/dt_reg1.png" class="img-fluid figure-img"></a>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-reg1-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;2: True vs predicted label for the regression DT.
@@ -714,7 +714,7 @@ Figure&nbsp;2: True vs predicted label for the regression DT.
 <div id="fig-reg2" class="quarto-figure quarto-figure-center quarto-float anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-reg2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<a href="../images/dt_reg2.png" class="lightbox" data-glightbox="description: .lightbox-desc-7" data-gallery="quarto-lightbox-gallery-7"><img src="../images/dt_reg2.png" class="img-fluid figure-img"></a>
+<a href="../images/dt_reg2.png" class="lightbox" data-gallery="quarto-lightbox-gallery-7" data-glightbox="description: .lightbox-desc-7"><img src="../images/dt_reg2.png" class="img-fluid figure-img"></a>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-reg2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;3: Predicted price vs the residuals for the regression DT.
@@ -733,7 +733,7 @@ Figure&nbsp;3: Predicted price vs the residuals for the regression DT.
 <div id="fig-cm" class="quarto-figure quarto-figure-center quarto-float anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-cm-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<a href="../images/dt_cm.png" class="lightbox" data-glightbox="description: .lightbox-desc-8" data-gallery="quarto-lightbox-gallery-8"><img src="../images/dt_cm.png" class="img-fluid figure-img"></a>
+<a href="../images/dt_cm.png" class="lightbox" data-gallery="quarto-lightbox-gallery-8" data-glightbox="description: .lightbox-desc-8"><img src="../images/dt_cm.png" class="img-fluid figure-img"></a>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-cm-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;4: The confusion matrix of true vs predicted labels of the random forest classifier.
@@ -1175,7 +1175,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
   </div>
 </nav>
 </div> <!-- /content -->
-<script>var lightboxQuarto = GLightbox({"descPosition":"bottom","openEffect":"zoom","loop":false,"closeEffect":"zoom","selector":".lightbox"});
+<script>var lightboxQuarto = GLightbox({"descPosition":"bottom","selector":".lightbox","openEffect":"zoom","closeEffect":"zoom","loop":false});
 window.onload = () => {
   lightboxQuarto.on('slide_before_load', (data) => {
     const { slideIndex, slideNode, slideConfig, player, trigger } = data;
