--- a/website/conclusions.html
+++ b/website/conclusions.html
@@ -259,8 +259,14 @@ Chen, Le, Alan Mislove, and Christo Wilson. 2016. <span>“An Empirical Analysis
 <div id="ref-ChevalierPrice" class="csl-entry" role="listitem">
 Chevalier, Judith, and Austan Goolsbee. 2003. <span>“<span class="nocase">Measuring Prices and Price Competition Online: Amazon.com and BarnesandNoble.com</span>.”</span> <em>Quantitative Marketing and Economics</em> 1 (2): 203–22. <a href="https://doi.org/10.1023/A:1024634613982">https://doi.org/10.1023/A:1024634613982</a>.
 </div>
+<div id="ref-svmPractical" class="csl-entry" role="listitem">
+Hsu, Chih-Wei, Chih-Chung Chang, Chih-Jen Lin, et al. 2003. <span>“A Practical Guide to Support Vector Classification.”</span> Tapei.
+</div>
 <div id="ref-MediniAmazon" class="csl-entry" role="listitem">
 Medini, Tharun, Qixuan Huang, Yiqiu Wang, Vijai Mohan, and Anshumali Shrivastava. 2019. <span>“Extreme Classification in Log Memory Using Count-Min Sketch: <span>A</span> Case Study of Amazon Search with 50M Products.”</span> <em>CoRR</em> abs/1910.13830. <a href="http://arxiv.org/abs/1910.13830">http://arxiv.org/abs/1910.13830</a>.
+</div>
+<div id="ref-sklearnCV" class="csl-entry" role="listitem">
+<span>“<span class="nocase">Nested versus non-nested cross-validation</span>.”</span> 2024. <em>Scikit-Learn</em>. <a href="https://scikit-learn.org/stable/auto_examples/model_selection/plot_nested_cross_validation_iris.html">https://scikit-learn.org/stable/auto_examples/model_selection/plot_nested_cross_validation_iris.html</a>.
 </div>
 <div id="ref-sklearn" class="csl-entry" role="listitem">
 Pedregosa, F., G. Varoquaux, A. Gramfort, V. Michel, B. Thirion, O. Grisel, M. Blondel, et al. 2011. <span>“Scikit-Learn: Machine Learning in <span>P</span>ython.”</span> <em>Journal of Machine Learning Research</em> 12: 2825–30.
