--- a/website/index.html
+++ b/website/index.html
@@ -285,16 +285,16 @@ window.Quarto = {
 </div>
 <div id="listing-listings" class="quarto-listing quarto-listing-container-grid">
 <div class="list grid quarto-listing-cols-3">
-<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1713820672671" data-listing-reading-time-sort="5" data-listing-word-count-sort="996">
-<a href="./intro.html" class="quarto-grid-link">
+<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1714453335351" data-listing-reading-time-sort="14" data-listing-word-count-sort="2661">
+<a href="./models/svm.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
-<p class="card-img-top"><img src="images/amazon_screenshot.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
+<p class="card-img-top"><img src="images/svm_1.png" alt="Example SVM" style="height: 150px;"  class="thumbnail-image card-img"/></p>
 <div class="card-body post-contents">
 <h5 class="no-anchor card-title listing-title" data-anchor-id="home">
-Introduction
+SVM (Support Vector Machine)
 </h5>
 <div class="card-text listing-description">
-In today’s digital landscape dominated by e-commerce giants such as Amazon, the analysis of retail product data assumes paramount importance as a means to unravel the…
+Support Vector Machines (SVMs) are a type of supervised learning model used for classification and regression tasks. They work by finding the hyperplane that best separates…
 </div>
 <div class="card-attribution card-text-small start">
 <div class="listing-author">
@@ -305,16 +305,16 @@ In today’s digital landscape dominated by e-commerce giants such as Amazon, th
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="1" data-listing-file-modified-sort="1713820572044" data-listing-reading-time-sort="3" data-listing-word-count-sort="418">
-<a href="./models/svm.html" class="quarto-grid-link">
+<div class="g-col-1" data-index="1" data-listing-file-modified-sort="1713820672671" data-listing-reading-time-sort="5" data-listing-word-count-sort="996">
+<a href="./intro.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
-<p class="card-img-top"><img src="images/svm_1.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
+<p class="card-img-top"><img src="images/amazon_screenshot.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
 <div class="card-body post-contents">
 <h5 class="no-anchor card-title listing-title">
-SVM (Support Vector Machine)
+Introduction
 </h5>
 <div class="card-text listing-description">
-Support Vector Machines (SVMs) are a type of supervised learning model used for classification and regression tasks. They work by finding the hyperplane that best separates…
+In today’s digital landscape dominated by e-commerce giants such as Amazon, the analysis of retail product data assumes paramount importance as a means to unravel the…
 </div>
 <div class="card-attribution card-text-small start">
 <div class="listing-author">
