--- a/website/models/pca.html
+++ b/website/models/pca.html
@@ -579,7 +579,7 @@ Figure&nbsp;2: The found principal components, colored by a feature in the datas
 <div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: flex-start;">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><a href="../images/pca_f7.png" class="lightbox" data-glightbox="description: .lightbox-desc-1" data-gallery="quarto-lightbox-gallery-1" title="TODO"><img src="../images/pca_f7.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/pca_f7.png" class="lightbox" data-gallery="quarto-lightbox-gallery-1" data-glightbox="description: .lightbox-desc-1" title="TODO"><img src="../images/pca_f7.png" class="img-fluid figure-img"></a></p>
 <figcaption>TODO</figcaption>
 </figure>
 </div>
@@ -587,25 +587,7 @@ Figure&nbsp;2: The found principal components, colored by a feature in the datas
 <div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: flex-start;">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><a href="../images/pca_f3.png" class="lightbox" data-glightbox="description: .lightbox-desc-2" data-gallery="quarto-lightbox-gallery-2" title="TODO"><img src="../images/pca_f3.png" class="img-fluid figure-img"></a></p>
-<figcaption>TODO</figcaption>
-</figure>
-</div>
-</div>
-</div>
-<div class="quarto-layout-row">
-<div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: flex-start;">
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><a href="../images/pca_f4.png" class="lightbox" data-glightbox="description: .lightbox-desc-3" data-gallery="quarto-lightbox-gallery-3" title="TODO"><img src="../images/pca_f4.png" class="img-fluid figure-img"></a></p>
-<figcaption>TODO</figcaption>
-</figure>
-</div>
-</div>
-<div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: flex-start;">
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><a href="../images/pca_f1.png" class="lightbox" data-glightbox="description: .lightbox-desc-4" data-gallery="quarto-lightbox-gallery-4" title="TODO"><img src="../images/pca_f1.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/pca_f3.png" class="lightbox" data-gallery="quarto-lightbox-gallery-2" data-glightbox="description: .lightbox-desc-2" title="TODO"><img src="../images/pca_f3.png" class="img-fluid figure-img"></a></p>
 <figcaption>TODO</figcaption>
 </figure>
 </div>
@@ -615,7 +597,7 @@ Figure&nbsp;2: The found principal components, colored by a feature in the datas
 <div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: flex-start;">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><a href="../images/pca_f5.png" class="lightbox" data-glightbox="description: .lightbox-desc-5" data-gallery="quarto-lightbox-gallery-5" title="TODO"><img src="../images/pca_f5.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/pca_f4.png" class="lightbox" data-gallery="quarto-lightbox-gallery-3" data-glightbox="description: .lightbox-desc-3" title="TODO"><img src="../images/pca_f4.png" class="img-fluid figure-img"></a></p>
 <figcaption>TODO</figcaption>
 </figure>
 </div>
@@ -623,7 +605,7 @@ Figure&nbsp;2: The found principal components, colored by a feature in the datas
 <div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: flex-start;">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><a href="../images/pca_f2.png" class="lightbox" data-glightbox="description: .lightbox-desc-6" data-gallery="quarto-lightbox-gallery-6" title="TODO"><img src="../images/pca_f2.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/pca_f1.png" class="lightbox" data-gallery="quarto-lightbox-gallery-4" data-glightbox="description: .lightbox-desc-4" title="TODO"><img src="../images/pca_f1.png" class="img-fluid figure-img"></a></p>
 <figcaption>TODO</figcaption>
 </figure>
 </div>
@@ -633,7 +615,25 @@ Figure&nbsp;2: The found principal components, colored by a feature in the datas
 <div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: flex-start;">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><a href="../images/pca_f6.png" class="lightbox" data-glightbox="description: .lightbox-desc-7" data-gallery="quarto-lightbox-gallery-7" title="TODO"><img src="../images/pca_f6.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/pca_f5.png" class="lightbox" data-gallery="quarto-lightbox-gallery-5" data-glightbox="description: .lightbox-desc-5" title="TODO"><img src="../images/pca_f5.png" class="img-fluid figure-img"></a></p>
+<figcaption>TODO</figcaption>
+</figure>
+</div>
+</div>
+<div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: flex-start;">
+<div class="quarto-figure quarto-figure-center">
+<figure class="figure">
+<p><a href="../images/pca_f2.png" class="lightbox" data-gallery="quarto-lightbox-gallery-6" data-glightbox="description: .lightbox-desc-6" title="TODO"><img src="../images/pca_f2.png" class="img-fluid figure-img"></a></p>
+<figcaption>TODO</figcaption>
+</figure>
+</div>
+</div>
+</div>
+<div class="quarto-layout-row">
+<div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: flex-start;">
+<div class="quarto-figure quarto-figure-center">
+<figure class="figure">
+<p><a href="../images/pca_f6.png" class="lightbox" data-gallery="quarto-lightbox-gallery-7" data-glightbox="description: .lightbox-desc-7" title="TODO"><img src="../images/pca_f6.png" class="img-fluid figure-img"></a></p>
 <figcaption>TODO</figcaption>
 </figure>
 </div>
@@ -1076,7 +1076,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
   </div>
 </nav>
 </div> <!-- /content -->
-<script>var lightboxQuarto = GLightbox({"openEffect":"zoom","closeEffect":"zoom","descPosition":"bottom","selector":".lightbox","loop":false});
+<script>var lightboxQuarto = GLightbox({"openEffect":"zoom","descPosition":"bottom","selector":".lightbox","loop":false,"closeEffect":"zoom"});
 window.onload = () => {
   lightboxQuarto.on('slide_before_load', (data) => {
     const { slideIndex, slideNode, slideConfig, player, trigger } = data;
